--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>30 Days with AhhThais</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css' rel='stylesheet'>
         <link rel="stylesheet" href="./assets/css/style.css">
         <link rel="stylesheet" href="./assets/css/reset.css">
         <script src="//cdnjs.cloudflare.com/ajax/libs/validate.js/0.13.1/validate.min.js"></script>
@@ -34,10 +35,35 @@
                     </h2>
                 </div>
                 <div class="container__header--right-side col_half"> 
+                    <div class="contact__card">
+                        <div class="card__img">
+                            <img src="./assets/img/AhhThais.jpg" alt="AhhThais">
+                        </div>
+                        <div class="card__title">
+                            <h2>AhhThais</h2>
+                        </div>
+                        <div class="card__name">
+                            <p>Student</p>
+                        </div>
+                        <div class="card__sm">
+                            <a href="https://www.facebook.com/ahhthais1406/">
+                                <i class="fab fa-facebook-f"></i>
+                            </a>
+                            <a href="https://www.youtube.com/channel/UCEY-c-PW1-__L70P0yWmWDg">
+                                <i class="fab fa-youtube"></i>
+                            </a>
+                            <a href="https://www.instagram.com/ahhthais2/">
+                                <i class="fab fa-instagram"></i>
+                            </a>
+                            <a href="https://github.com/AhhThais">
+                                <i class="fab fa-github"></i>
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="container__body">
-                <div class="container__body--about-me" id="about_me">
+                <div class="container__body--about-me col_half" id="about_me">
                     <h3>About me:</h3>
                     <p>
                         My name is Thai, currently a coding apprentice, I hope I can improve my skills on this journey.
@@ -48,15 +74,6 @@
                     </p>
                 </div>
                 <div class="container__body--contact-me" id="contact_me">
-                    <h3>Contact wiht me</h3>
-                    <label for="">
-                        <form action="./main.php" method="post" enctype="multipart/form-data" name="EmailFrom" id="contact__me-form" >
-                            <p>Name</p>
-                            <input type="text" placeholder="Your name...">
-                            Message:<br> <textarea name=”ContactCommentt” rows=”6″ cols=”20″>
-                            </textarea><br><br> <input type=”submit” value=”Submit”> 
-                        </form>
-                    </label>
                 </div>
             </div>
             <div class="container__end">
